[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://Themes/menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://Textures/pause_screen.png" type="Texture" id=3]
[ext_resource path="res://Fonts/APRIFA__.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=4]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="pause_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
texture = ExtResource( 3 )

[node name="pauseBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -49.5
margin_right = 225.0
margin_bottom = 93.5

[node name="ResumeGame" type="Button" parent="pauseBox"]
margin_right = 449.0
margin_bottom = 66.0
focus_neighbour_top = NodePath("../ReturntoMenu")
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 1, 0.447059, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 2 )
text = "Resume Game"

[node name="ReturntoMenu" type="Button" parent="pauseBox"]
margin_top = 70.0
margin_right = 449.0
margin_bottom = 111.0
focus_neighbour_bottom = NodePath("../ResumeGame")
custom_colors/font_color_focus = Color( 1, 0.447059, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 3 )
text = "Return to Menu"

[connection signal="pressed" from="pauseBox/ResumeGame" to="." method="_on_ResumeGame_pressed"]
[connection signal="pressed" from="pauseBox/ReturntoMenu" to="." method="_on_ReturntoMenu_pressed"]
